I6342: Fixes broken layout in theme details page

--- a/static/css/impala/hovercards.less
+++ b/static/css/impala/hovercards.less
@@ -259,10 +259,6 @@
         font-size: 16px;
         line-height: 18px;
     }
-    li {
-        height: 212px;
-        width: 240px;
-    }
     .hovercard {
         padding: 9px 9px 11px;
         margin: 0;
